--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS + SoloJSX</title>
+    <title>SoloJSX Todo</title>
+
+    <link rel="stylesheet" href="src/css/style.css">
+    <script type="module" src="src/ts/App.tsx"></script>
 </head>
 
-<body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
-</body>
+<body></body>
 
 </html>
